// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpenseSummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $1.95
  </h1>
</div>
`;

exports[`should correctly render ExpenseSummary with 1 expense 2`] = `
<div>
  <h1>
    Viewing 
    3
     
    expenses
     totalling 
    $241.95
  </h1>
</div>
`;
